# sysaster-core

./: .gitignore  .gitmodules  Dockerfile  README.md  configure.sh  sysaster-core.asta
configs/scripts/: download_tiny_default.sh
docs/: sysaster-core.asta
docs/diagrams/sequence/: 6_send_result_data.png.bak
examples/: rasp_settings.json  rasp_settings_rpi.json  settings-topic.json  settings.json  static_settings.json  static_settings_rpi.json  tello_settings.json
sources/: CMakeLists.txt
sources/include/sysaster/: common.h  core.h  helpers.h
sources/include/sysaster/core/connection/: CdsClientInfoDataTypes.h  ClientInfo.h  ConnectionThread.h  ConnectionThreadDispatcher.h
sources/include/sysaster/core/dao/: DetectionDAO.h  SQLite3DetectionDAO.h
sources/include/sysaster/core/detector/: CdsResultDataTypes.h  DetectionResultData.h  DetectionThread.h  PersonDetector.h
sources/include/sysaster/core/imgsource/: CdsImageData.h  ImageRequestor.h  ImageRequestorSync.h  ImageSource.h  ImageThreadDispatcher.h  StaticImageSource.h
sources/include/sysaster/core/settings/: JSONSettingsParser.h  Settings.h
sources/include/sysaster/extra/raspberry/: RaspcamImageSource.h
sources/include/sysaster/extra/tello/: TelloImageSource.h
sources/include/sysaster/extra/yolo/: YOLOv3PersonDetector.h
sources/python/tello/: tello.py
sources/src/: SysasterMain.cpp  common.cpp  helpers.cpp
sources/src/core/connection/: ConnectionThread.cpp  ConnectionThreadDispatcher.cpp
sources/src/core/dao/: SQLite3DetectionDAO.cpp
sources/src/core/detector/: DetectionResultData.cpp
sources/tello/: linux_install.sh
sources/tests/: detections_sqlite_tests.cpp  tello_tests.cpp
